# Solar-Powered-Home-Automation-with-Load-Management

./: CHANGELOG.md  DATAREADME.md  DATA_README.md  LEGACYNOTES.md  LICENSE  Makefile  README.md  SECURITY.md  progress-log.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
arduino/: README-arduino-cli.md  arduino-cli.yaml  solar_load_manager.ino
arduino/sketches/solar_controller/: solar_controller.ino
data/: bench.csv
metrics/: metrics.csv
raspberry_pi/: pi_controller.py  test_automation_ci.py
src/: Solar_home_auto.ino
tests/: test_mock_ci.py
